Fixed Skills CSS to Align Skill Name Under Icon

--- a/rokawoo-react-website/src/components/Experience/Experience.module.css
+++ b/rokawoo-react-website/src/components/Experience/Experience.module.css
@@ -32,6 +32,7 @@
 .skill {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 11px;
 }
 
@@ -66,13 +67,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 11px;
+  gap: 17px;
   background: #19376d;
-  background: linear-gradient(
-    90deg,
-    #19376d 0%,
-    rgba(25, 55, 109, 0) 100%
-  );
+  background: linear-gradient(90deg, #19376d 0%, rgba(25, 55, 109, 0) 100%);
   border-radius: 10px;
   padding: 24px;
 }
@@ -96,7 +93,7 @@
 }
 
 .historyItemDetails ul {
-  margin-top:  6px;
+  margin-top: 6px;
   list-style-position: inside;
   font-size: 25px;
   list-style-type: disc;
